# rust-telegram-bot

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: ci.yml
include/: meteo.h  rust_telegram_bot.h
rust-lib/: Cargo.toml  rustfmt.toml
rust-lib/src/: ffi.rs  lib.rs  parsing.rs
src/: main.c  queue.c  queue.h  responder.c  responder.h  utils.c  utils.h
test/: abts.c  abts.h  abts_tests.h  test_queue.c  test_utils.c  testutil.c  testutil.h
