[package]
name = "meteo"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
description = "A Rust library for fetching current weather information using the Open-Meteo API"

[lib]
crate-type = ["lib", "staticlib"]

[dependencies]
open-meteo-api = "0.1.4"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
